--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 <body>
     <h1>Hello World!</h1>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About Us</li>
+        </ul>
+    </nav>
 </body>
 
 </html>
